--- a/css/main/main.less
+++ b/css/main/main.less
@@ -615,14 +615,6 @@ u {
 	}
 }
 
-#footer {
-	width: 1060px;
-	height: 50px;
-	margin: auto;
-	margin-top: 50px;
-	border: 2px solid black;
-	padding: 5px 0 0 0;
-}
 #header {
 	width: auto;
 	height: 50px;
@@ -710,6 +702,19 @@ u {
 				}
 			}
 		}
+	}
+}
+#footer {
+	width: auto;
+	height: 50px;
+	padding: 0;
+	margin: auto;
+	padding: 5px 0 0 0;
+	background-color: #465363;
+	color: white;
+	.content {
+		width: 1060px;
+		margin: auto;
 	}
 }
 /*# sourceMappingURL=main.css.map */
