--- a/css/main/main.less
+++ b/css/main/main.less
@@ -615,6 +615,24 @@ u {
 	}
 }
 
+.buttonlink {
+  cursor: pointer;
+  box-shadow: 0 2px 4px 0 #778667;
+  background: #5da412;
+  background: linear-gradient(135deg, #5da412 5%, #44771f 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#5da412', endColorstr='#44771f', GradientType=1);
+  border-radius: 2px;
+  border: 1px solid #31581e;
+  display: inline-block;
+  color: #fff;
+  font-family: arial;
+  font-size: 10px;
+  font-weight: normal;
+  padding: 4px 10px;
+  text-decoration: none;
+  text-shadow: 1px 1px 4px #7cacde;
+}
+
 #header {
 	width: auto;
 	height: 50px;
