--- a/css/main/main.less
+++ b/css/main/main.less
@@ -470,14 +470,10 @@ u {
 								background-color: #465363;
 								outline: none;
 								&:hover {
-									box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+									box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
 								}
 								&:active {
-									padding-top: 13px;
-									padding-bottom: 9px;
-									padding-right: 38px;
-									text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.34);
-									box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+									box-shadow: 0 0 12px 2px rgba(0, 0, 0, 0.5);
 									background-position: 231px 8px;
 								}
 							}
